--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://DKILGORE79/github.io/Week-20-React-Portfilio",
+  "homepage": "https://csinlasath.github.io/test-d/",
   "name": "react_portfolio",
   "version": "0.1.0",
   "private": true,
